--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,35 @@
  *= require_tree .
  *= require_self
  */
+ body {
+  padding: 20px;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  margin-right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.letter-box {
+  /* display: inline-block; */
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin: 5px;
+  text-align: center;
+  background-color: rgb(250, 250, 155);
+  border: 1px solid black;
+  font-size: 24px;
+  font-weight: bold;
+}
